# leader_election

./: .gitignore  README.md
converter/: README.md
converter/converter/: CMakeLists.txt  package.xml
converter/converter/src/: converter.cpp  converter.hpp
demo/launch/: leader_election.xml
demo/src/ecu/config/: main_vcu.yaml  sub_ecu.yaml
demo/src/ecu/src/: ecu.cpp
implementations/: Makefile  coordination.c  coordination.h  docker-compose.yml  leader_election  run.sh  visualize.py
implementations/ros2/: README.md
implementations/ros2/src/ecu/: CMakeLists.txt  package.xml
implementations/ros2/src/ecu/config/: main_ecu.yaml  sub_vcu.yaml
implementations/ros2/src/ecu/src/: ecu.cpp
implementations/udp-baremetal/: Makefile  node_info_local.txt
implementations/udp-baremetal/include/: coordination.h
implementations/udp-baremetal/install/: coordination
implementations/udp-baremetal/src/: coordination.c
implementations/udp-linux/: Makefile  node_info.txt  node_info_local.txt  node_info_rp.txt
implementations/udp-linux/include/: coordination.h
implementations/udp-linux/src/: coordination.c
specification/: leader_election.cfg  leader_election.tla
specification/SPIN/: Makefile  README.md  leader_election.pml  result.txt
specification/SPIN/results/: 4nodes_link_crash.txt  4nodes_node_crash.txt
specification/TLA+/general/: leader_election.cfg  leader_election.tla
specification/TLA+/optimized/: leader_election.cfg  leader_election.tla
